imp: adapt to multi-tenant